[package]
name = "rawnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline-async ="0.3"
clap = { version = "4.2", features = ["derive"] }
tokio= {version="1.27", features = ["sync","net", "macros", "rt-multi-thread", "io-util"]}
nom ="7.1"
futures="*"