[package]
name = "rawnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline-async ="0.4.5"
clap = { version = "4.5.35", features = ["derive"] }
tokio= {version="1.44.2", features = ["sync","net", "macros", "rt-multi-thread", "io-util"]}
nom ="8"
futures="0.3.31"

[patch.crates-io]
